--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title id="title">John Houbolt</title>
+    <title id="title">Tribute Page</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body id="main">
