add biographical content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body id="main">
+    <h1>Dr. John Houbolt</h1>
+    <p>
+      The man who's lunar-orbit rendezvous "saved the government $20 billion."
+    </p>
     <div id="img-div">
       <figure>
         <img
@@ -13,17 +17,76 @@
           src="https://crgis.ndc.nasa.gov/crgis/images/6/68/1962-L-05849.jpg"
         />
         <figcaption id="img-caption">
-          John Houbolt in 1962 with diagram of LOR concept
+          Dr. John Houbolt in 1962 with diagram of LOR concept
         </figcaption>
       </figure>
+      <p>
+        Among his many achievements, Dr. Houbolt was an avid mathematician, and
+        in researching and teaching himself orbital mechanics, he realized that
+        the concept of Lunar Orbit Rendezvous (LOR) had far-reaching
+        ramifications in space travel. He deemed this idea so important that he
+        risked his career promoting the concept of LOR.
+      </p>
     </div>
-    <p id="tribute-info">tribute info</p>
-    <a
-      id="tribute-link"
-      href="https://crgis.ndc.nasa.gov/historic/John_C._Houbolt"
-      target="_blank"
-      >link</a
-    >
+    <section id="tribute-info">
+      <h3 id="headline">Here's a time line of Dr. Houbolt's life:</h3>
+      <ul>
+        <li><strong>1919</strong> - Born in Altoona, Iowa</li>
+        <li>
+          <strong>1942</strong> - Earned MS degree in Civil Engineering from the
+          University of Illinois at Urbana-Champaign
+        </li>
+        <li>
+          <strong>1943</strong> - Began his career as an engineer in the
+          Structures Research Division at the National Advisory Committee for
+          Aeronautics (NACA)
+        </li>
+        <li>
+          <strong>1949</strong> - Associate Chief of the Dynamic Loads Division
+        </li>
+        <li>
+          <strong>1957</strong> - Earned Ph.D at Swiss Federal Institute of
+          Technology, Zurich (ETH)
+        </li>
+        <li>
+          <strong>1961</strong> - Chief of the Theoretical Mechanics Division
+        </li>
+        <li>
+          <strong>1963</strong> - Received the NASA Exceptional Scientific
+          Achievement Award for the conception and development of the LOR. Left
+          NASA for position of Senior Vice President and Senior Consultant at
+          Aeronautical Research Associates of Princeton
+        </li>
+        <li>
+          <strong>1976</strong> - Returned as Chief Aeronautical Scientist at
+          NASA
+        </li>
+        <li><strong>1984</strong> - Retired from NASA</li>
+        <li>
+          <strong>2014</strong> - Died in Scarborough, ME after celebrating his
+          95th birthday
+        </li>
+      </ul>
+      <blockquote
+        cite="Spaceflight Revolution: NASA Langley Research Center from Sputnik to Apollo. James R. Hansen. 1995. SP-4308. pg.267."
+      >
+        <p>
+          "I can safely say I'm shaking hands with the man who single-handedly
+          saved the government $20 billion."
+        </p>
+        <cite>-- Ed Garrock - NASA</cite>
+      </blockquote>
+      <h3>
+        If you have time, you should read more about this remarkable human being
+        at his
+        <a
+          id="tribute-link"
+          href="https://crgis.ndc.nasa.gov/historic/John_C._Houbolt"
+          target="_blank"
+          >NASA Biography</a
+        >.
+      </h3>
+    </section>
   </body>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
