testing a new paragraph

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           Dr. John Houbolt in 1962 with diagram of LOR concept
         </figcaption>
       </figure>
+      <p>Added a new paragraph here</p>
       <p>
         Among his many achievements, Dr. Houbolt was an avid mathematician, and
         in researching and teaching himself orbital mechanics, he realized that
